<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.mywork.Feature.HomeActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nama"
                android:textSize="18sp"
                android:paddingRight="8dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"/>
            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_data"
                android:textSize="18sp"
                android:paddingRight="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_waktu"
                android:textSize="18sp"
                android:paddingRight="8dp"
                android:paddingLeft="16dp"
                android:paddingBottom="8dp"/>
            <TextView
                android:id="@+id/tv_waktu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_data"
                android:textSize="18sp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/viewColor"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <EditText
                android:id="@+id/ed_aktivitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_margin="16dp"
                android:hint="@string/label_aktivitas"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/viewColor"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_kategori"
                android:textSize="18sp"
                android:paddingTop="16dp"
                android:paddingRight="8dp"
                android:paddingLeft="16dp"/>
            <Spinner
                android:id="@+id/sp_kategori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_margin="16dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/viewColor"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <EditText
            android:id="@+id/ed_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="16dp"
            android:hint="@string/label_note"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_submit"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="bottom"/>

    </LinearLayout>

</ScrollView>